@@ -219,6 +219,9 @@
 /* Version number of package */
 #undef VERSION
 
+/* Define to 1 if we need (v)snprintf wrapper functions. */
+#undef WRAP_SNPRINTF
+
 /* Enable large inode numbers on Mac OS X 10.5.  */
 #ifndef _DARWIN_USE_64_BIT_INODE
 # define _DARWIN_USE_64_BIT_INODE 1
